# lecture-ai-engineering

./: .env  .gitignore  AIエンジニアリングDay2宿題_3.ipynb  Dockerfile  README.md  day1_practice.ipynb  day1_practice_ipynb_のコピー.ipynb  day3_homework_250511_06_submission.ipynb  day3_homework_250512_07_submission.ipynb  h -u origin develop  homework_250511_06_submission.ipynb  mypractice.ipynb  new_file.py  remove_widgets.py  【課題提出用】day1_practice_ipynb_のコピー.ipynb  演習用  第3回課題.ipynb
.ci/: baseline_metrics.json  (+1 more)
day5/: .gitattributes  Pipfile  README.md  model_test_readme.md  mystudy.md  pyproject.toml  requirements.txt
day5/.github/workflows/: test.yml
day5/homework/: pipeline.py
day5/homework/tests/: test_model.py
day5/homework2/: main.py  pipeline.py
day5/homework2/models/: baseline_model.pkl  titanic_model.pkl
day5/homework2/tests/: test_model.py
day5/tests/: conftest.py  generate_baseline.py  test_accuracy.py  test_latency.py  test_regression.py
day5/宿題/models/: baseline_model.pkl
day5/演習1/: main.py  pipeline.py  test_model.py
day5/演習1/mlruns/0/: meta.yaml
day5/演習1/mlruns/240465198786603614/: meta.yaml
day5/演習1/models/: titanic_model.pkl
day5/演習2/: .gitignore  black_check.py  main.py  test_main.py  test_model.py  test_model_perf.py
day5/演習2/models/: titanic_model.pkl
day5/演習3/baselines/: metrics.json
day5/演習3/models/: titanic_model.pkl
day5/演習3/tests/: conftest.py  test_data.py  test_inference.py  test_model.py  test_model_benchmark.py  test_model_diff.py  test_model_extra.py  test_model_performance.py  test_model_regression.py  test_regression.py
(+118 files in other folders)
